--- a/detector/train_model.ipynb
+++ b/detector/train_model.ipynb
@@ -18,10 +18,15 @@
    "source": [
     "Make sure to add the `IRIS_DIR` variable to your session. It should be the location of the iris_challenge repo. Then add the remainder of the path variables. For my local computer these paths are as follows:\n",
     "\n",
-    "`IRIS_DIR=/home/ook/repos/iris_challenge`\n",
-    "`PATH_TO_YOUR_PIPELINE_CONFIG=${IRIS_DIR}/detector/models/ssd_mobilenet_v1.config`\n",
-    "`PATH_TO_TRAIN_DIR=${IRIS_DIR}/detector/models/model/train`\n",
-    "`PATH_TO_EVAL_DIR=${IRIS_DIR}/detector/models/model/eval`\n",
+    "```\n",
+    "IRIS_DIR=/home/ook/repos/iris_challenge\n",
+    "PATH_TO_YOUR_PIPELINE_CONFIG=${IRIS_DIR}/detector/models/ssd_mobilenet_v1.config\n",
+    "PATH_TO_TRAIN_DIR=${IRIS_DIR}/detector/models/model/train\n",
+    "PATH_TO_EVAL_DIR=${IRIS_DIR}/detector/models/model/eval\n",
+    "TRAIN_PATH=${PATH_TO_TRAIN_DIR}/model.ckpt-30788\n",
+    "PATH_TO_SAVED_MODEL=${IRIS_DIR}/detector/models/output_inference_graph.pb\n",
+    "PIPELINE_CONFIG_PATH=${PATH_TO_TRAIN_DIR}/pipeline.config\n",
+    "```\n",
     "\n",
     "Then run the following commands from the `tensorflow/models/research/` directory to train and test.\n",
     "\n",
@@ -42,14 +47,22 @@
     "    --pipeline_config_path=${PATH_TO_YOUR_PIPELINE_CONFIG} \\\n",
     "    --checkpoint_dir=${PATH_TO_TRAIN_DIR} \\\n",
     "    --eval_dir=${PATH_TO_EVAL_DIR}\n",
+    "```\n",
+    "\n",
+    "*Save Model*\n",
+    "\n",
+    "```\n",
+    "python object_detection/export_inference_graph.py \\\n",
+    "    --input_type image_tensor \\\n",
+    "    --pipeline_config_path ${PIPELINE_CONFIG_PATH} \\\n",
+    "    --trained_checkpoint_prefix ${TRAIN_PATH} \\\n",
+    "    --output_directory ${PATH_TO_SAVED_MODEL}\n",
     "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
