Horizon detector using opencv hough and canny

--- a/detector/train_model.ipynb
+++ b/detector/train_model.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure to add the `IRIS_DIR` variable to your session. It should be the location of the iris_challenge repo. Then add the remainder of the path variables. For my local computer these paths are as follows:\n",
+    "Make sure to add the `IRIS_DIR` variable to your session. It should be the location of the iris_challenge repo. Then add the remainder of the path variables. For training on my local computer these paths are as follows:\n",
     "\n",
     "```\n",
     "IRIS_DIR=/home/ook/repos/iris_challenge\n",
@@ -59,11 +59,6 @@
     "    --output_directory ${PATH_TO_SAVED_MODEL}\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
