Horizon line finished, added output images to readme

--- a/detector/run_model.ipynb
+++ b/detector/run_model.ipynb
@@ -34,9 +34,10 @@
     "# Size, in inches, of the output images.\n",
     "IMAGE_SIZE = (12, 8)\n",
     "\n",
-    "# Define paths to sub-folders\n",
+    "# Define paths to image sub-folders\n",
     "root_dir = Path.cwd()\n",
     "images_path = root_dir / '..' / 'test_images'\n",
+    "output_path = root_dir / '..' / 'output_images'\n",
     "\n",
     "# Frozen graph file\n",
     "FROZEN_GRAPH = root_dir / 'models' / 'output_inference_graph.pb' / 'frozen_inference_graph.pb'\n",
@@ -69,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "def load_image_into_numpy_array(image):\n",
@@ -111,7 +114,9 @@
     "              line_thickness=8)\n",
     "            plt.figure(figsize=IMAGE_SIZE)\n",
     "            plt.imshow(image_np)\n",
-    "            plt.show()"
+    "            plt.show()\n",
+    "            # Save image to output directory\n",
+    "            Image.fromarray(image_np).save(str(output_path / image_path.name))"
    ]
   }
  ],
